Modify synchronization code to avoid dead lock when using the PackageAdmin service from start and stop methods. Fixed ordering bug in PackageAdmin.refreshPackages(). Fixed so that property assignments on the command line is evaluated in the correct order when used together with -xargs. Added support for running OSGi test suite.